# egile-mcp-reporter

./: .env.example  .gitignore  LICENSE  README.md  example.py  install.bat  install.sh  pyproject.toml
src/egile_mcp_reporter/: __init__.py  chart_service.py  html_generator.py  pdf_generator.py  pptx_generator.py  report_service.py  server.py
